reconfigured the form
