# src/api/controllers/forms.controller.ts
@@ -3,7 +3,7 @@ import formsServices from '../services/forms.services'
 // import * as validations from '../validations/fom.validation'
 import decodeTokenMiddleware from '../middlewares/auth'
 import { Route, Res, TsoaResponse, Request, Body, Response, Tags, Example, Controller, Get, Post, Delete, Query, Path, Patch } from 'tsoa'
-import IFormService, { ICreate, IDelete, IGet, IGetAll, IUpdate } from '../interfaces/forms.interface'
+import IFormService, { ICreate, IDelete, IFillForm, IGet, IGetAll, IUpdate } from '../interfaces/forms.interface'
 import { signToken } from '../utils/tokenizer'
 
 @Route('form')
@@ -14,11 +14,10 @@ export class formController extends Controller {
    * */
   @Post('create')
   @Response(201, 'Form created successfully')
-  // email already in use
   @Response(409, 'Failed to create form')
   public async create(
     @Res() sendSuccess: TsoaResponse<201, { success: true, data: any }>,
-    @Res() sendError: TsoaResponse<400 | 401 | 500, { success: false, status: number, message: string }>,
+    @Res() sendError: TsoaResponse<400 | 401 | 500, { success: false, status: number, message: string, error: object }>,
     @Body() payload: ICreate,
     @Request() request: any
   ): Promise<any> {
@@ -27,7 +26,7 @@ export class formController extends Controller {
       // authenticate the user
       await decodeTokenMiddleware(request)
       if (!request.decodedUser.userId) {
-        return sendError(401, { success: false, status: 401, message: 'unauthorized' })
+        return sendError(401, { success: false, status: 401, message: 'unauthorized',error: {} })
       }
       // await validations.
       const form = await formsServices.create({ ...payload, userId: request.decodedUser.userId })
@@ -44,20 +43,26 @@ export class formController extends Controller {
  * */
   @Patch(':id')
   @Response(201, 'Form updated successfully')
-  // email already in use
   @Response(409, 'Failed to update form')
   public async update(
-    @Res() sendSuccess: TsoaResponse<201, { success: true, data: any }>,
-    @Res() sendError: TsoaResponse<400 | 401 | 500, { success: false, status: number, message: string,  }>,
-    @Body() payload: IUpdate
+    @Res() sendSuccess: TsoaResponse<200, { success: true, data: any }>,
+    @Res() sendError: TsoaResponse<400 | 401 | 500, { success: false, status: number, message: string, error: object  }>,
+    @Body() payload: IUpdate,
+    @Request() request: any
   ): Promise<any> {
     try {
       //await validations.signup.validateAsync(payload)
-      // create the user
-      const form = await formsServices.Update(payload)
+      await decodeTokenMiddleware(request)
+      if (!request.decodedUser.userId) {
+        return sendError(401, { success: false, status: 401, message: 'unauthorized', error: {} })
+      }
+      // await validations.
+      const form = await formsServices.Update({ ...payload, userId: request.decodedUser.userId })
+      const jwt = await signToken(request.decodedUser)
+      // send the user a verification email
       //const jwt = await signToken({ userId: user._id, email: user.email, is_admin: user.is_admin || false })
       // send the user a verification email
-      sendSuccess(201, { success: true, data: form }, /* set the jwt */ )
+      sendSuccess(200, { success: true, data: form }, /* set the jwt */ { 'x-auth-token': jwt })
     } catch (err: any) {
       return await handleErrorResponse(sendError, err)
     }
@@ -68,20 +73,26 @@ export class formController extends Controller {
    * */
   @Delete(':id')
   @Response(201, 'Form deleted successfully')
-  // email already in use
   @Response(409, 'Failed to delete form')
   public async delete(
-    @Res() sendSuccess: TsoaResponse<201, { success: true, data: any }>,
-    @Res() sendError: TsoaResponse<400, { success: false, status: number, message: object }>,
-    @Body() payload: IDelete
+    @Res() sendSuccess: TsoaResponse<200, { success: true, data: any }>,
+    @Res() sendError: TsoaResponse<400 | 401, { success: false, status: number, message: string, error: object }>,
+    @Body() payload: IDelete,
+    @Request() request: any
   ): Promise<any> {
     try {
       //await validations.signup.validateAsync(payload)
-      // create the user
+      await decodeTokenMiddleware(request)
+      if (!request.decodedUser.userId) {
+        return sendError(401, { success: false, status: 401, message: 'unauthorized', error: {} })
+      }
+      // await validations.
       const form = await formsServices.delete(payload)
+      const jwt = await signToken(request.decodedUser)
+      // send the user a verification email
       //const jwt = await signToken({ userId: user._id, email: user.email, is_admin: user.is_admin || false })
       // send the user a verification email
-      sendSuccess(201, { success: true, data: form })
+      sendSuccess(200, { success: true, data: form }, /* set the jwt */ { 'x-auth-token': jwt })
     } catch (err: any) {
       return await handleErrorResponse(sendError, err)
     }
@@ -91,22 +102,32 @@ export class formController extends Controller {
  * @description - first step to validating a pre registered account
  * */
   @Get(':id')
-  @Response(201, 'Form created successfully')
-  // email already in use
-  @Response(409, 'Failed to create form')
-
+  @Response(200, 'Form loaded successfully')
+  @Response(409, 'Failed to load form')
+  @Response(401, 'Access denied',{success: false, status: 401, message: 'Access denied', error: {message: 'invalid or no token provided', place: 'request>headers>x-auth-token'}})
   public async get(
-    @Res() sendSuccess: TsoaResponse<201, { success: true, data: any }>,
-    @Res() sendError: TsoaResponse<400, { success: false, status: number, message: object }>,
-    @Query() id: string
+    @Res() sendSuccess: TsoaResponse<200, { success: true, data: any }>,
+    @Res() sendError: TsoaResponse<400 | 401 | 500, { success: false, status: number, message: string, error: object }>,
+    @Path() id: string,
+    @Request() request: any
   ): Promise<any> {
     try {
-      //await validations.signup.validateAsync(payload)
-      // create the user
-      const form = await formsServices.get({formId: id})
+      // if (request.headers['x-auth-token'] || request.headers['authorization']){
+      //   await decodeTokenMiddleware(request)
+      // }
+
+      // if (!request.decodedUser.userId) {
+      //   console.log('no user id', request.decodedUser)
+      //   // return sendError(401, { success: false, status: 401, message: 'unauthorized', error: {} })
+      // }
+      // await validations.
+      const form = await formsServices.get({ formId: id})
+      // console.log('form', form)
+      let jwt = request.decodedUser ? await signToken(request.decodedUser) : ''
+      // send the user a verification email
       //const jwt = await signToken({ userId: user._id, email: user.email, is_admin: user.is_admin || false })
       // send the user a verification email
-      sendSuccess(201, { success: true, data: form }, /* set the jwt */ )
+      sendSuccess(200, { success: true, data: form }, /* set the jwt */ { ...(jwt && {'x-auth-token': jwt })})
     } catch (err: any) {
       return await handleErrorResponse(sendError, err)
     }
@@ -116,8 +137,7 @@ export class formController extends Controller {
  * @description - first step to validating a pre registered account
  * */
   @Get()
-  @Response(201, 'Forms fetched successfully')
-  // email already in use
+  @Response(200, 'Forms fetched successfully')
   @Response(409, 'Failed to fetch forms')
   public async getAll(
     @Res() sendSuccess: TsoaResponse<201, { success: true, data: any }>,
